# Seismic-Segmentation

./: .gitattributes  Dockerfile  README.md  pyproject.toml
confs/: evaluation.yaml  inference.yaml  preprocessing.yaml  promotion.yaml  sag.yaml  training.yaml  tuning.yaml  unet.yaml
data/NZ_PM_seismic_dataset/: parihaka_labels.sgy  parihaka_seismic.sgy
data/NZ_PM_seismic_dataset/interpretation/: class_info.json
docs/: index.html  search.js  seismic_segmentation.html
docs/seismic_segmentation/: cli.html  data.html  evaluation.html  inference.html  models.html  tasks.html  training.html  utils.html
docs/seismic_segmentation/cli/: main.html
output/training/seismic_unet_training/: config.yaml  log.txt
output/training/seismic_unet_training/tensorboard/: events.out.tfevents.1741392932.Mac.home.97119.0  events.out.tfevents.1741393252.Mac.home.98347.0  events.out.tfevents.1741393899.Mac.home.1067.0  events.out.tfevents.1741394299.Mac.home.3004.0  events.out.tfevents.1741394951.Mac.home.5565.0  events.out.tfevents.1741395000.Mac.home.5793.0  events.out.tfevents.1741405493.Mac.home.9852.0  events.out.tfevents.1741419856.Mac.home.52941.0  events.out.tfevents.1741420358.Mac.home.54868.0  events.out.tfevents.1741420521.Mac.home.55489.0  events.out.tfevents.1741420641.Mac.home.56078.0  events.out.tfevents.1741421156.Mac.home.58163.0  events.out.tfevents.1741421233.Mac.home.58497.0  events.out.tfevents.1741421477.Mac.home.59464.0  events.out.tfevents.1741421630.Mac.home.60046.0  events.out.tfevents.1741421871.Mac.home.60974.0  events.out.tfevents.1741422011.Mac.home.61528.0  events.out.tfevents.1741422017.Mac.home.61568.0  events.out.tfevents.1741422107.Mac.home.61974.0  events.out.tfevents.1741422180.Mac.home.62302.0  events.out.tfevents.1741422461.Mac.home.63428.0  events.out.tfevents.1741422516.Mac.home.63666.0  events.out.tfevents.1741422545.Mac.home.63814.0  (+6 more)
processed_data/: class_info.json  data.h5  log.txt
seismic-segmentation/: README.md  justfile
src/seismic_segmentation/: __init__.py  __main__.py
src/seismic_segmentation/cli/: __init__.py  main.py
src/seismic_segmentation/data/: __init__.py  dataset.py  preprocessing.py
src/seismic_segmentation/evaluation/: __init__.py  evaluator.py
src/seismic_segmentation/inference/: __init__.py  predictor.py
src/seismic_segmentation/models/: __init__.py  sag_model.py  unet.py
src/seismic_segmentation/scripts/: debug_sag_model.py
src/seismic_segmentation/tasks/: __init__.py  data_validation.py  evaluate.py  infer.py  preprocess.py  promote.py  train.py  tune.py
src/seismic_segmentation/training/: __init__.py  trainer.py
src/seismic_segmentation/utils/: __init__.py  logger.py  loss.py  metrics.py  visualization.py
tests/: test_scripts.py
